# serverless-capstone

./: .gitignore  readme.md
backend/: package-lock.json  package.json  serverless.yml
backend/src/businessLogic/: classification.ts  groups.ts  notifications.ts
backend/src/dataLayer/: classification.ts  connections.ts  groupsAccess.ts
backend/src/lambda/auth/: rs256Auth0Authorizer.ts
backend/src/lambda/http/: createGroup.ts  createImage.ts  getGroups.ts  getImage.ts  getImages.ts
backend/src/lambda/s3/: resizeImage.ts  sendNotifications.ts
backend/src/lambda/websocket/: connect.ts  disconnect.ts
classifier/: CMakeLists.txt  Dockerfile  classification_classes_ILSVRC2012.txt  main.cpp
client/: package.json
client/src/: config.ts
client/src/components/: UdagramImage.tsx
client/src/types/: ImageModel.ts
hello-s3/: main.cpp
hello-world/: Dockerfile
opencv-dnn/: Dockerfile  Makefile  classification.cpp
